Update serverbase training function

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,22 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'mnist1'"
+       "2.709507131576538"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stri.split('/')[-1]"
+    "import numpy as np\n",
+    "\n",
+    "2.709507131576538 * 1.0"
    ]
   }
  ],
